Added output argparser

--- a/main.ipynb
+++ b/main.ipynb
@@ -12,6 +12,7 @@
     "import re\n",
     "import random\n",
     "from datetime import datetime\n",
+    "from argparse import ArgumentParser\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -23,7 +24,12 @@
     "\n",
     "from adafactor import Adafactor\n",
     "\n",
-    "device = 'cuda' if torch.has_cuda else 'cpu'"
+    "device = 'cuda' if torch.has_cuda else 'cpu'\n",
+    "\n",
+    "parser = ArgumentParser()\n",
+    "parser.add_argument('-o', '--o', default='./', dest='output', help='Location of output(s)')\n",
+    "\n",
+    "model_dir = parser.parse_args().output"
    ]
   },
   {
@@ -545,7 +551,7 @@
     "        'epoch': epoch,\n",
     "        'model_state_dict': model.state_dict(),\n",
     "        'optimizer_state_dict': optimizer.state_dict()\n",
-    "    }, f'checkpoints/amadeus-performer-{epoch}.pt')\n",
+    "    }, os.path.join(model_dir, f'checkpoints/amadeus-performer-{epoch}.pt'))\n",
     "\n",
     "for epoch in range(TRAIN_EPOCHS):\n",
     "    print(f'Training epoch #{epoch+1} of {TRAIN_EPOCHS}:')\n",
