Add docker image and allow cuda hyperparam

--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
     "import re\n",
     "import random\n",
     "from datetime import datetime\n",
-    "from argparse import ArgumentParser\n",
+    "from argparse import ArgumentParser, ArgumentTypeError\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -24,10 +24,23 @@
     "\n",
     "from adafactor import Adafactor\n",
     "\n",
-    "device = 'cuda' if torch.has_cuda else 'cpu'\n",
+    "def str2bool(v):\n",
+    "    if isinstance(v, bool):\n",
+    "       return v\n",
+    "    if v.lower() in ('yes', 'true', 't', 'y', '1'):\n",
+    "        return True\n",
+    "    elif v.lower() in ('no', 'false', 'f', 'n', '0'):\n",
+    "        return False\n",
+    "    else:\n",
+    "        raise ArgumentTypeError('Boolean value expected.')\n",
     "\n",
     "parser = ArgumentParser()\n",
     "parser.add_argument('-o', '--o', default='./', dest='output', help='Location of output(s)')\n",
+    "parser.add_argument('-c', '--use_cuda', type=str2bool, dest='use_cuda', default=True, help=\"Use cuda if cuda supported\")\n",
+    "\n",
+    "use_cuda = parser.parse_args().use_cuda\n",
+    "\n",
+    "device = 'cuda' if torch.has_cuda and use_cuda else 'cpu'\n",
     "\n",
     "model_dir = parser.parse_args().output"
    ]
