Create directory structure

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,6 +13,7 @@
     "import random\n",
     "from datetime import datetime\n",
     "from argparse import ArgumentParser, ArgumentTypeError\n",
+    "from pathlib import Path\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -42,7 +43,8 @@
     "\n",
     "device = 'cuda' if torch.has_cuda and use_cuda else 'cpu'\n",
     "\n",
-    "model_dir = parser.parse_args().output"
+    "model_dir = parser.parse_args().output\n",
+    "Path(os.path.join(model_dir, 'checkpoints')).mkdir(parents=True, exist_ok=True)"
    ]
   },
   {
