--- a/main.ipynb
+++ b/main.ipynb
@@ -40,12 +40,13 @@
     "        raise ArgumentTypeError('Boolean value expected.')\n",
     "\n",
     "parser = ArgumentParser()\n",
-    "parser.add_argument('-o', '--o', default='./', dest='output', help='Location of output(s)')\n",
+    "parser.add_argument('-o', '--o', dest='output', default='./', help='Location of output(s)')\n",
     "parser.add_argument('-c', '--use_cuda', type=str2bool, dest='use_cuda', default=True, help='Use cuda if cuda supported')\n",
     "parser.add_argument('-a', '--artifacts', dest='artifacts', default='./', help='Directory to save artifacts such as checkpoints')\n",
     "parser.add_argument('-e', '--epochs', type=int, dest='train_epochs', default=10, help='Number of epochs to train on')\n",
     "parser.add_argument('-p', '--print_every', type=int, dest='print_every', default=100, help='After how many iterations to print a status')\n",
     "parser.add_argument('-s', '--save_every', type=int, dest='save_every', default=0, help='After how many epochs before saving a checkpoint (0 to turn off)')\n",
+    "parser.add_argument('-b', '--batch_size', type=int, dest='batch_size', default=1, help='Batch size to train on')\n",
     "\n",
     "args, unknown = parser.parse_known_args()\n",
     "\n",
@@ -59,6 +60,7 @@
     "train_epochs = max(args.train_epochs, 20)\n",
     "print_every = max(args.print_every, 1)\n",
     "save_every = max(args.save_every, 0)\n",
+    "batch_size = max(args.batch_size, 1)\n",
     "\n",
     "tokenizer = BertWordPieceTokenizer('data/bert-base-uncased-vocab.txt', lowercase=True)"
    ]
@@ -678,7 +680,7 @@
     "\n",
     "train_set, test_set = train_test_split(conversations, test_size=0.2)\n",
     "\n",
-    "train_iter = ConversationIter(train_set, seq_len, batch_size=16)\n",
+    "train_iter = ConversationIter(train_set, seq_len, batch_size=batch_size)\n",
     "test_iter = ConversationIter(test_set, seq_len)\n",
     "\n",
     "def save_checkpoint(epoch: int):\n",
@@ -687,7 +689,7 @@
     "        'epoch': epoch,\n",
     "        'model_state_dict': model.state_dict(),\n",
     "        'optimizer_state_dict': optimizer.state_dict()\n",
-    "    }, os.path.join(artifacts_dir, f'checkpoints/amadeus-performer-{epoch}.pt'))\n",
+    "    }, os.path.join(artifacts_dir, 'checkpoints', f'amadeus-performer-{epoch}.pt'))\n",
     "\n",
     "print(f'Starting train on device: {device}\\n')\n",
     "for epoch in range(train_epochs):\n",
