--- a/train.ipynb
+++ b/train.ipynb
@@ -67,7 +67,7 @@
     "model_dir = args.output\n",
     "artifacts_dir = args.artifacts\n",
     "\n",
-    "train_epochs = max(args.train_epochs, 10)\n",
+    "train_epochs = max(args.train_epochs, 1)\n",
     "print_every = max(args.print_every, 1)\n",
     "validate_every = max(args.validate_every, 0)\n",
     "save_every = max(args.save_every, 0)\n",
@@ -411,6 +411,11 @@
    "source": [
     "from adafactor import Adafactor\n",
     "\n",
+    "try:\n",
+    "    from gradient_statsd import Client\n",
+    "    has_gradient = True\n",
+    "    client = Client()\n",
+    "\n",
     "optimizer = Adafactor(model.parameters())\n",
     "\n",
     "start_time = datetime.now()\n",
@@ -420,6 +425,8 @@
     "\n",
     "def train(conv_iter: ConversationIter):\n",
     "    model.train()\n",
+    "    total_loss = 0\n",
+    "    counter = 0\n",
     "    accrued_loss = 0\n",
     "    start = datetime.now()\n",
     "    for i, (inputs, targets) in enumerate(conv_iter):\n",
@@ -442,8 +449,11 @@
     "        \n",
     "        if (i + 1) % print_every == 0:\n",
     "            print(f'  Iter {i+1} (Took {(datetime.now() - start).total_seconds():.3f}s): AverageLoss: {accrued_loss/print_every:.4f}')\n",
+    "            total_loss += accrued_loss\n",
     "            accrued_loss = 0\n",
     "            start = datetime.now()\n",
+    "        counter += 1\n",
+    "    return total_loss / counter\n",
     "\n",
     "def validate(conv_iter: ConversationIter):\n",
     "    model.eval(False)\n",
@@ -460,6 +470,7 @@
     "        \n",
     "        loss = model(inputs, targets, mask=mask)\n",
     "        print(f'Validation loss: {loss.item()}')\n",
+    "    return loss.item()\n",
     "\n",
     "def save_checkpoint(epoch: int):\n",
     "    Path(os.path.join(artifacts_dir, 'checkpoints')).mkdir(parents=True, exist_ok=True)\n",
@@ -501,19 +512,28 @@
     }
    ],
    "source": [
-    "print(f'Starting train on device: {device}\\n')\n",
+    "print(f'Starting train on device: {device}')\n",
+    "print(f'Training on {train_epochs} epochs with batch size of {batch_size}')\n",
+    "print(f'Validating every {validate_every} and saving every {save_every}\\n')\n",
+    "\n",
     "for epoch in range(train_epochs):\n",
     "    prompt = f'Training epoch #{epoch+1} of {train_epochs}:'\n",
     "    print(f'{prompt}\\n{\"=\" * len(prompt)}')\n",
     "\n",
     "    total = datetime.now()\n",
     "\n",
-    "    train(train_set)\n",
+    "    total_loss = train(train_set)\n",
+    "\n",
+    "    if has_gradient:\n",
+    "        client.increment('EPOCHS', 1)\n",
+    "        client.gauge('LOSS_PER_EPOCH', total_loss)\n",
     "\n",
     "    print(f'Epoch {epoch+1} took {(datetime.now()-total).total_seconds():.3f}s')\n",
     "\n",
     "    if validate_every > 0 and (epoch + 1) % validate_every == 0:\n",
-    "        validate(test_set)\n",
+    "        validate_loss = validate(test_set)\n",
+    "        if has_gradient:\n",
+    "            client.gauge('VALIDATE_LOSS', validate_loss)\n",
     "\n",
     "    if save_every > 0 and (epoch + 1) % save_every == 0:\n",
     "        save_checkpoint(epoch + 1)\n",
