Add proper gradient metrics and some more sub files

--- a/train.ipynb
+++ b/train.ipynb
@@ -223,7 +223,11 @@
     }
    ],
    "source": [
-    "FOLDERS = ['ditfxx_subs', 'steins_gate_subs', 'guilty_crown_subs', 'ngnl_subs', 'rezero_subs']\n",
+    "FOLDERS = [\n",
+    "    'ditfxx_subs', 'steins_gate_subs', 'guilty_crown_subs',\n",
+    "    'ngnl_subs', 'rezero_subs', 'promised_neverland_subs', 'your_lie_subs',\n",
+    "    'shield_hero_subs', 'fate_ubw_subs'\n",
+    "    ]\n",
     "CONVERSATION_DEPTH = 4\n",
     "\n",
     "multiplier = [60, 60 * 60, 24 * 60 * 60]\n",
@@ -411,10 +415,13 @@
    "source": [
     "from adafactor import Adafactor\n",
     "\n",
+    "has_gradient = False\n",
     "try:\n",
     "    from gradient_statsd import Client\n",
     "    has_gradient = True\n",
     "    client = Client()\n",
+    "except ImportError:\n",
+    "    print('gradient_statsd package is not installed, not using gradient metrics.')\n",
     "\n",
     "optimizer = Adafactor(model.parameters())\n",
     "\n",
