Prevent divison by 0

--- a/train.ipynb
+++ b/train.ipynb
@@ -453,14 +453,15 @@
     "        optimizer.step()\n",
     "        \n",
     "        accrued_loss += loss.item()\n",
+    "        total_loss += loss.item()\n",
+    "        counter += 1\n",
     "        \n",
     "        if (i + 1) % print_every == 0:\n",
     "            print(f'  Iter {i+1} (Took {(datetime.now() - start).total_seconds():.3f}s): AverageLoss: {accrued_loss/print_every:.4f}')\n",
     "            total_loss += accrued_loss\n",
     "            accrued_loss = 0\n",
     "            start = datetime.now()\n",
-    "        counter += 1\n",
-    "    return total_loss / counter\n",
+    "    return total_loss / max(counter, 1)\n",
     "\n",
     "def validate(conv_iter: ConversationIter):\n",
     "    model.eval(False)\n",
