--- a/train.ipynb
+++ b/train.ipynb
@@ -391,6 +391,7 @@
     "from vocab import ConversationIter\n",
     "\n",
     "conversations = list(vocab.conversations.values())\n",
+    "conversations = filter(lambda c: len(c) > 0, conversations)\n",
     "\n",
     "train_set, test_set = train_test_split(conversations, test_size=0.2)\n",
     "\n",
