Specify input output lengths via command line arguments

--- a/train.ipynb
+++ b/train.ipynb
@@ -58,6 +58,9 @@
     "parser.add_argument('-T', '--save_every', type=int, dest='save_every', default=0, help='After how many epochs before saving a checkpoint (0 to turn off)')\n",
     "parser.add_argument('-A', '--batch_size', type=int, dest='batch_size', default=1, help='Batch size to train on')\n",
     "\n",
+    "parser.add_argument('--input_length', type=int, dest='input_length', default=4096, help='Maximum input sequence length')\n",
+    "parser.add_argument('--output_length', type=int, dest='output_length', default=1024, help='Maximum output sequence length')\n",
+    "\n",
     "args, unknown = parser.parse_known_args()\n",
     "\n",
     "use_cuda = args.use_cuda and torch.has_cuda\n",
@@ -66,6 +69,9 @@
     "\n",
     "model_dir = args.output\n",
     "artifacts_dir = args.artifacts\n",
+    "\n",
+    "input_length = args.input_length\n",
+    "output_length = args.output_length\n",
     "\n",
     "train_epochs = max(args.train_epochs, 1)\n",
     "print_every = max(args.print_every, 1)\n",
@@ -345,7 +351,7 @@
     "from amadeus_model import Amadeus\n",
     "\n",
     "model = Amadeus(num_tokens=vocab.tokenizer.get_vocab_size(), \\\n",
-    "    enc_seq_len=4096, dec_seq_len=512)"
+    "    enc_seq_len=input_length, dec_seq_len=output_length)"
    ]
   },
   {
