Add log for saving checkpoints

--- a/train.ipynb
+++ b/train.ipynb
@@ -488,12 +488,14 @@
     "    return loss.item()\n",
     "\n",
     "def save_checkpoint(epoch: int):\n",
+    "    checkpoint_name = f'amadeus-performer-{format_time(start_time)}-{epoch}.pt'\n",
     "    Path(os.path.join(artifacts_dir, 'checkpoints')).mkdir(parents=True, exist_ok=True)\n",
     "    torch.save({\n",
     "        'epoch': epoch,\n",
     "        'model_state_dict': model.state_dict(),\n",
     "        'optimizer_state_dict': optimizer.state_dict()\n",
-    "    }, os.path.join(artifacts_dir, 'checkpoints', f'amadeus-performer-{format_time(start_time)}-{epoch}.pt'))"
+    "    }, os.path.join(artifacts_dir, 'checkpoints', checkpoint_name))\n",
+    "    print(f'Saved checkpoint: {checkpoint_name}')"
    ]
   },
   {
