--- a/train.ipynb
+++ b/train.ipynb
@@ -455,7 +455,7 @@
     "            mask = mask.cuda()\n",
     "\n",
     "        optimizer.zero_grad()\n",
-    "        loss = model(inputs, targets, mask=mask)\n",
+    "        loss = model(inputs, targets, mask=mask, return_loss=True)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
@@ -483,7 +483,7 @@
     "            targets = targets.cuda()\n",
     "            mask = mask.cuda()\n",
     "        \n",
-    "        loss = model(inputs, targets, mask=mask)\n",
+    "        loss = model(inputs, targets, mask=mask, return_loss=True)\n",
     "        print(f'Validation loss: {loss.item()}')\n",
     "    return loss.item()\n",
     "\n",
