Maybe optimized sequence lengths

--- a/train.ipynb
+++ b/train.ipynb
@@ -63,8 +63,8 @@
     "parser.add_argument('-T', '--save_every', type=int, dest='save_every', default=0, help='After how many epochs before saving a checkpoint (0 to turn off)')\n",
     "parser.add_argument('-A', '--batch_size', type=int, dest='batch_size', default=1, help='Batch size to train on')\n",
     "\n",
-    "parser.add_argument('--input_length', type=int, dest='input_length', default=4096, help='Maximum input sequence length')\n",
-    "parser.add_argument('--output_length', type=int, dest='output_length', default=4096, help='Maximum output sequence length')\n",
+    "parser.add_argument('--input_length', type=int, dest='input_length', default=1024, help='Maximum input sequence length')\n",
+    "parser.add_argument('--output_length', type=int, dest='output_length', default=1024, help='Maximum output sequence length')\n",
     "\n",
     "args, unknown = parser.parse_known_args()\n",
     "\n",
@@ -102,7 +102,7 @@
    "source": [
     "from vocab import Vocab\n",
     "\n",
-    "vocab = Vocab(conversation_depth=4)"
+    "vocab = Vocab(input_length, conversation_depth=4)"
    ]
   },
   {
