Fix logarithm sequence size lengths

--- a/train.ipynb
+++ b/train.ipynb
@@ -239,9 +239,9 @@
     "    convos += len(c)\n",
     "\n",
     "if input_length == 0:\n",
-    "    input_length = math.ceil(math.log2(vocab.longest_tokenized))\n",
+    "    input_length = 2**math.ceil(math.log2(vocab.longest_tokenized))\n",
     "if output_length == 0:\n",
-    "    output_length = math.ceil(math.log2(vocab.longest_tokenized * (CONVERSATION_DEPTH - 1)))\n",
+    "    output_length = 2**math.ceil(math.log2(vocab.longest_tokenized * (CONVERSATION_DEPTH - 1)))\n",
     "\n",
     "print(f'Done! Num conversations: {convos}, num words: {len(vocab.words)}, longest convo: {vocab.longest_tokenized}\\n\\n')"
    ]
