--- a/train.ipynb
+++ b/train.ipynb
@@ -55,16 +55,17 @@
     "\n",
     "parser = ArgumentParser()\n",
     "parser.add_argument('-o', '--o', dest='output', default='', help='Location of output(s)')\n",
-    "parser.add_argument('-g', '--use_cuda', type=str2bool, dest='use_cuda', default=True, help='Use cuda if cuda supported')\n",
+    "parser.add_argument('-c', '--use_cuda', type=str2bool, dest='use_cuda', default=True, help='Use cuda if cuda supported')\n",
     "parser.add_argument('-a', '--artifacts', dest='artifacts', default='', help='Directory to save artifacts such as checkpoints')\n",
     "parser.add_argument('-e', '--epochs', type=int, dest='train_epochs', default=10, help='Number of epochs to train on')\n",
     "parser.add_argument('-p', '--print_every', type=int, dest='print_every', default=100, help='After how many iterations to print a status')\n",
-    "parser.add_argument('-t', '--validate_every', type=int, dest='validate_every', default=10, help='After how many epochs to validate loss on test set')\n",
-    "parser.add_argument('-T', '--save_every', type=int, dest='save_every', default=0, help='After how many epochs before saving a checkpoint (0 to turn off)')\n",
-    "parser.add_argument('-A', '--batch_size', type=int, dest='batch_size', default=1, help='Batch size to train on')\n",
+    "parser.add_argument('-v', '--validate_every', type=int, dest='validate_every', default=10, help='After how many epochs to validate loss on test set')\n",
+    "parser.add_argument('-s', '--save_every', type=int, dest='save_every', default=0, help='After how many epochs before saving a checkpoint (0 to turn off)')\n",
+    "parser.add_argument('-b', '--batch_size', type=int, dest='batch_size', default=1, help='Batch size to train on')\n",
     "\n",
     "parser.add_argument('--input_length', type=int, dest='input_length', default=0, help='Maximum input sequence length')\n",
     "parser.add_argument('--output_length', type=int, dest='output_length', default=0, help='Maximum output sequence length')\n",
+    "parser.add_argument('--conversation_depth', type=int, dest=\"conversation_depth\", default=4, help='Depth of conversations, the minimum should be 2.')\n",
     "\n",
     "args, unknown = parser.parse_known_args()\n",
     "\n",
@@ -82,7 +83,9 @@
     "print_every = max(args.print_every, 1)\n",
     "validate_every = max(args.validate_every, 0)\n",
     "save_every = max(args.save_every, 0)\n",
-    "batch_size = max(args.batch_size, 1)"
+    "batch_size = max(args.batch_size, 1)\n",
+    "\n",
+    "conversation_depth = max(args.conversation_depth, 2)"
    ]
   },
   {
@@ -101,10 +104,7 @@
    "outputs": [],
    "source": [
     "from vocab import Vocab\n",
-    "\n",
-    "CONVERSATION_DEPTH = 4\n",
-    "\n",
-    "vocab = Vocab(input_length, conversation_depth=CONVERSATION_DEPTH)"
+    "vocab = Vocab(input_length, conversation_depth=conversation_depth)"
    ]
   },
   {
@@ -489,7 +489,7 @@
     "    convos += len(c)\n",
     "\n",
     "if input_length == 0:\n",
-    "    input_length = 2**math.ceil(math.log2(vocab.longest_tokenized * (CONVERSATION_DEPTH - 1)))\n",
+    "    input_length = 2**math.ceil(math.log2(vocab.longest_tokenized * (conversation_depth - 1)))\n",
     "if output_length == 0:\n",
     "    output_length = 2**math.ceil(math.log2(vocab.longest_tokenized))\n",
     "\n",
