Optimize training better and reduce container size

--- a/train.ipynb
+++ b/train.ipynb
@@ -467,7 +467,7 @@
     "                line = line[len('Dialogue:'):].strip().split(',')\n",
     "                line[len(current_format)-1] = ','.join(line[len(current_format)-1:])\n",
     "                dialogue = dict(zip(current_format, line))\n",
-    "                if not dialogue['Style'] in ['main', 'Default', 'italics', 'flashback', 'ngnl-main']: continue\n",
+    "                if not dialogue['Style'].lower() in ['main', 'default', 'italics', 'flashback', 'ngnl-main']: continue\n",
     "                # Extract variables\n",
     "                speaker = dialogue['Name']\n",
     "                text = normalize_text(dialogue['Text'])\n",
