Fix parsing for certain sub files

--- a/train.ipynb
+++ b/train.ipynb
@@ -460,7 +460,9 @@
     "                except UnicodeDecodeError:\n",
     "                    print('    Error decoding a line, skipped.')\n",
     "                if line.startswith('Format:'):\n",
-    "                    line = line[len('Format:'):].strip().split(', ')\n",
+    "                    line = line[len('Format:'):].strip().split(',')\n",
+    "                    for i in range(len(line)):\n",
+    "                        line[i] = line[i].strip()\n",
     "                    current_format = line\n",
     "                    continue\n",
     "                if current_format == False or not line.startswith('Dialogue:'): continue\n",
@@ -469,7 +471,11 @@
     "                dialogue = dict(zip(current_format, line))\n",
     "                if not dialogue['Style'].lower() in ['main', 'default', 'italics', 'flashback', 'ngnl-main']: continue\n",
     "                # Extract variables\n",
-    "                speaker = dialogue['Name']\n",
+    "                speaker = ''\n",
+    "                for k in ['Actor', 'Name']:\n",
+    "                    if k in dialogue:\n",
+    "                        speaker = dialogue[k]\n",
+    "                        break\n",
     "                text = normalize_text(dialogue['Text'])\n",
     "                time = get_time(dialogue['Start'])\n",
     "                style = dialogue['Style']\n",
@@ -528,7 +534,7 @@
     "model = Amadeus(num_tokens=vocab.tokenizer.get_vocab_size(), \\\n",
     "    enc_seq_len=input_length, dec_seq_len=output_length)\n",
     "\n",
-    "print(input_length, output_length)"
+    "print(f'input size: {input_length} output size: {output_length}')"
    ]
   },
   {
