Add GCP gpu training support and fix output argument

--- a/train.ipynb
+++ b/train.ipynb
@@ -54,7 +54,7 @@
     "        raise ArgumentTypeError('Boolean value expected.')\n",
     "\n",
     "parser = ArgumentParser()\n",
-    "parser.add_argument('-o', '--o', dest='output', default='', help='Location of output(s)')\n",
+    "parser.add_argument('-o', '--output', dest='output', default='', help='Location of output(s)')\n",
     "parser.add_argument('-c', '--use_cuda', type=str2bool, dest='use_cuda', default=True, help='Use cuda if cuda supported')\n",
     "parser.add_argument('-a', '--artifacts', dest='artifacts', default='', help='Directory to save artifacts such as checkpoints')\n",
     "parser.add_argument('-e', '--epochs', type=int, dest='train_epochs', default=10, help='Number of epochs to train on')\n",
