Add google cloud capabilities to model training and saving

--- a/train.ipynb
+++ b/train.ipynb
@@ -34,6 +34,7 @@
    "source": [
     "import math\n",
     "import os, sys\n",
+    "import subprocess\n",
     "import re\n",
     "from argparse import ArgumentParser, ArgumentTypeError\n",
     "from datetime import datetime\n",
@@ -699,13 +700,25 @@
     "    return loss.item()\n",
     "\n",
     "def save_checkpoint(epoch: int):\n",
+    "    tmp_model_dir = artifacts_dir\n",
+    "    if os.getenv('GCLOUD_ENABLE') and model_dir.startswith('gs://'):\n",
+    "            tmp_model_dir = '/tmp'\n",
+    "    checkpoint_path = os.path.join(tmp_model_dir, 'checkpoints')\n",
+    "    checkpoint_file = os.path.join(model_path, model_name)\n",
+    "\n",
     "    checkpoint_name = f'amadeus-performer-{format_time(start_time)}-{epoch}.pt'\n",
-    "    Path(os.path.join(artifacts_dir, 'checkpoints')).mkdir(parents=True, exist_ok=True)\n",
+    "    Path(checkpoint_path).mkdir(parents=True, exist_ok=True)\n",
     "    torch.save({\n",
     "        'epoch': epoch,\n",
     "        'model_state_dict': model.state_dict(),\n",
     "        'optimizer_state_dict': optimizer.state_dict()\n",
-    "    }, os.path.join(artifacts_dir, 'checkpoints', checkpoint_name))\n",
+    "    }, checkpoint_file)\n",
+    "\n",
+    "    if os.getenv('GCLOUD_ENABLE') and artifacts_dir.startswith('gs://'):\n",
+    "        subprocess.check_call([\n",
+    "            'gsutil', 'cp', checkpoint_file,\n",
+    "            os.path.join(artifacts_dir, checkpoint_name)\n",
+    "        ])\n",
     "    print(f'Saved checkpoint: {checkpoint_name}')"
    ]
   },
@@ -837,8 +850,21 @@
     "\n",
     "    print('\\n\\n')\n",
     "\n",
-    "Path(os.path.join(model_dir, 'models')).mkdir(parents=True, exist_ok=True)\n",
-    "torch.save(model.state_dict(), os.path.join(model_dir, 'models', f'amadeus-performer-{format_time(start_time)}.pt'))\n",
+    "tmp_model_dir = model_dir\n",
+    "if os.getenv('GCLOUD_ENABLE') and model_dir.startswith('gs://'):\n",
+    "        tmp_model_dir = '/tmp'\n",
+    "model_path = os.path.join(tmp_model_dir, 'models')\n",
+    "model_name = f'amadeus-performer-{format_time(start_time)}.pt'\n",
+    "model_file = os.path.join(model_path, model_name)\n",
+    "Path(model_path).mkdir(parents=True, exist_ok=True)\n",
+    "torch.save(model.state_dict(), model_file)\n",
+    "\n",
+    "if os.getenv('GCLOUD_ENABLE') and model_dir.startswith('gs://'):\n",
+    "    subprocess.check_call([\n",
+    "        'gsutil', 'cp', model_file,\n",
+    "        os.path.join(model_dir, model_name)\n",
+    "    ])\n",
+    "        \n",
     "print('Finished training and saved model in models directory.')"
    ]
   }
