Optimize model data and fix cuda dockerfile entrypoint

--- a/train.ipynb
+++ b/train.ipynb
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "from vocab import Vocab\n",
-    "vocab = Vocab(input_length, conversation_depth=conversation_depth)"
+    "voc = Vocab(input_length, conversation_depth=conversation_depth)"
    ]
   },
   {
@@ -452,7 +452,7 @@
     "            current_format = False\n",
     "            current_conversation = []\n",
     "            \n",
-    "            vocab.switch_context(f)\n",
+    "            voc.switch_context(f)\n",
     "            line = True\n",
     "            # for line in sub_file.readlines():\n",
     "            while line:\n",
@@ -483,24 +483,24 @@
     "\n",
     "                if len(text.strip()) == 0: continue\n",
     "\n",
-    "                vocab.add_conversation({\n",
+    "                voc.add_conversation({\n",
     "                    'speaker': speaker,\n",
     "                    'line': text,\n",
     "                    'when': time,\n",
     "                    'style': style\n",
     "                })\n",
-    "                vocab.add_sentence(text)\n",
+    "                voc.add_sentence(text)\n",
     "\n",
     "convos = 0\n",
-    "for k, c in vocab.conversations.items():\n",
+    "for k, c in voc.conversations.items():\n",
     "    convos += len(c)\n",
     "\n",
     "if input_length == 0:\n",
-    "    input_length = 2**math.ceil(math.log2(vocab.longest_tokenized * (conversation_depth - 1)))\n",
+    "    input_length = 2**math.ceil(math.log2(voc.longest_tokenized * (conversation_depth - 1)))\n",
     "if output_length == 0:\n",
-    "    output_length = 2**math.ceil(math.log2(vocab.longest_tokenized))\n",
+    "    output_length = 2**math.ceil(math.log2(voc.longest_tokenized))\n",
     "\n",
-    "print(f'Done! Num conversations: {convos}, num words: {len(vocab.words)}, longest convo: {vocab.longest_tokenized}\\n\\n')"
+    "print(f'Done! Num conversations: {convos}, num words: {len(voc.words)}, longest convo: {voc.longest_tokenized}\\n\\n')"
    ]
   },
   {
@@ -532,7 +532,7 @@
    "source": [
     "from amadeus_model import Amadeus\n",
     "\n",
-    "model = Amadeus(num_tokens=vocab.tokenizer.get_vocab_size(), \\\n",
+    "model = Amadeus(num_tokens=voc.tokenizer.get_vocab_size(), \\\n",
     "    enc_seq_len=input_length, dec_seq_len=output_length)\n",
     "\n",
     "print(f'input size: {input_length} output size: {output_length}')"
@@ -560,8 +560,8 @@
     }
    ],
    "source": [
-    "in_seq = torch.randint(0, vocab.tokenizer.get_vocab_size(), (1, model.in_seq_len))\n",
-    "out_seq = torch.randint(0, vocab.tokenizer.get_vocab_size(), (1, model.out_seq_len))\n",
+    "in_seq = torch.randint(0, voc.tokenizer.get_vocab_size(), (1, model.in_seq_len))\n",
+    "out_seq = torch.randint(0, voc.tokenizer.get_vocab_size(), (1, model.out_seq_len))\n",
     "mask = torch.ones(1, model.in_seq_len).bool()\n",
     "\n",
     "y = model(in_seq, out_seq, mask=mask)\n",
@@ -570,7 +570,11 @@
     "    from torchviz import make_dot\n",
     "    display(make_dot(y.mean(), params=dict(model.named_parameters())))\n",
     "except Exception:\n",
-    "    print('Torch graph was not created, continuing.')"
+    "    print('Torch graph was not created, continuing.')\n",
+    "\n",
+    "in_seq = None\n",
+    "out_seq = None\n",
+    "mask = None"
    ]
   },
   {
@@ -600,15 +604,12 @@
     "\n",
     "from vocab import ConversationIter\n",
     "\n",
-    "conversations = list(vocab.conversations.values())\n",
-    "conversations = list(filter(lambda c: len(c) > 0, conversations))\n",
-    "\n",
-    "train_set, test_set = train_test_split(conversations, test_size=0.2)\n",
+    "train_set, test_set = train_test_split(voc.get_conversations(), test_size=0.2)\n",
     "\n",
     "train_set = ConversationIter(train_set, in_seq_len=model.in_seq_len, \\\n",
-    "    out_seq_len=model.out_seq_len, tokenizer=vocab.tokenizer, batch_size=batch_size)\n",
+    "    out_seq_len=model.out_seq_len, batch_size=batch_size)\n",
     "test_set = ConversationIter(test_set, in_seq_len=model.in_seq_len, \\\n",
-    "    out_seq_len=model.out_seq_len, tokenizer=vocab.tokenizer, batch_size=batch_size)"
+    "    out_seq_len=model.out_seq_len, batch_size=batch_size)"
    ]
   },
   {
@@ -822,7 +823,7 @@
     }
    ],
    "source": [
-    "print(f'Starting train on device: {device}')\n",
+    "print(f'\\n\\nStarting train on device: {device}')\n",
     "print(f'Training on {train_epochs} epochs with batch size of {batch_size}')\n",
     "print(f'Validating every {validate_every} and saving every {save_every}\\n')\n",
     "\n",
