--- a/train.ipynb
+++ b/train.ipynb
@@ -56,6 +56,7 @@
     "\n",
     "parser = ArgumentParser()\n",
     "parser.add_argument('-o', '--output', dest='output', default='', help='Location of output(s)')\n",
+    "parser.add_argument('-d', '--debug', type=str2bool, dest='debug', default=True, help='Debug logging specific files and extra verbosity')\n",
     "parser.add_argument('-c', '--use_cuda', type=str2bool, dest='use_cuda', default=True, help='Use cuda if cuda supported')\n",
     "parser.add_argument('-a', '--artifacts', dest='artifacts', default='', help='Directory to save artifacts such as checkpoints')\n",
     "parser.add_argument('-e', '--epochs', type=int, dest='train_epochs', default=10, help='Number of epochs to train on')\n",
@@ -85,6 +86,8 @@
     "validate_every = max(args.validate_every, 0)\n",
     "save_every = max(args.save_every, 0)\n",
     "batch_size = max(args.batch_size, 1)\n",
+    "\n",
+    "debug_mode = args.debug\n",
     "\n",
     "conversation_depth = max(args.conversation_depth, 2)"
    ]
@@ -440,7 +443,8 @@
     "    for f in dir:\n",
     "        filepath = os.path.join(os.getcwd(), 'data', folder, f)\n",
     "        if not os.path.isfile(filepath): continue\n",
-    "        print(f'  Opening file: {f}')\n",
+    "        if debug_mode:\n",
+    "            print(f'  Opening file: {f}')\n",
     "        with open(filepath, 'r', encoding='utf-8', errors='ignore') as sub_file:\n",
     "            is_event = False\n",
     "            line = True\n",
