Clip gradients and set tokenizers env

--- a/train.ipynb
+++ b/train.ipynb
@@ -359,6 +359,8 @@
     "def format_time(dt: datetime) -> str:\n",
     "    return format(dt, '%Y-%m-%d-%H.%M.%S')\n",
     "\n",
+    "gs_folder = f'amadeus-model-{format_time(start_time)}'\n",
+    "\n",
     "def train(conv_iter: ConversationIter):\n",
     "    model.train()\n",
     "    total_loss = 0\n",
@@ -371,17 +373,16 @@
     "        inputs = torch.tensor([inp.ids for inp in inputs], device=device)\n",
     "        targets = torch.tensor([tar.ids for tar in targets], device=device)\n",
     "\n",
-    "        # if use_cuda:\n",
-    "        #     inputs = inputs.cuda()\n",
-    "        #     targets = targets.cuda()\n",
-    "        #     mask = mask.cuda()\n",
-    "\n",
     "        optimizer.zero_grad()\n",
     "\n",
     "        with torch.cuda.amp.autocast():\n",
     "            loss = model(inputs, targets, mask=mask)\n",
     "\n",
-    "        scaler.scale(loss.mean()).backward()\n",
+    "        scaler.scale(loss).backward()\n",
+    "\n",
+    "        scaler.unscale_(optimizer)\n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameteres(), 0.5)\n",
+    "\n",
     "        scaler.step(optimizer)\n",
     "        scaler.update()\n",
     "        \n",
@@ -413,7 +414,7 @@
     "    if os.getenv('GCLOUD_ENABLE') and model_dir.startswith('gs://'):\n",
     "            tmp_model_dir = '/tmp'\n",
     "    checkpoint_path = os.path.join(tmp_model_dir, 'checkpoints')\n",
-    "    checkpoint_name = f'amadeus-performer-{format_time(start_time)}-{epoch}.pt'\n",
+    "    checkpoint_name = f'amadeus-performer-{format_time(start_time)}-e{epoch}.chkpt'\n",
     "    checkpoint_file = os.path.join(checkpoint_path, checkpoint_name)\n",
     "    Path(checkpoint_path).mkdir(parents=True, exist_ok=True)\n",
     "    torch.save({\n",
@@ -425,7 +426,7 @@
     "    if os.getenv('GCLOUD_ENABLE') and artifacts_dir.startswith('gs://'):\n",
     "        subprocess.check_call([\n",
     "            'gsutil', 'cp', checkpoint_file,\n",
-    "            os.path.join(artifacts_dir, checkpoint_name)\n",
+    "            os.path.join(artifacts_dir, gs_folder, checkpoint_name)\n",
     "        ])\n",
     "    print(f'Saved checkpoint: {checkpoint_name}')"
    ]
@@ -476,7 +477,7 @@
     "if os.getenv('GCLOUD_ENABLE') and model_dir.startswith('gs://'):\n",
     "    subprocess.check_call([\n",
     "        'gsutil', 'cp', model_file,\n",
-    "        os.path.join(model_dir, model_name)\n",
+    "        os.path.join(model_dir, gsfolder, model_name)\n",
     "    ])\n",
     "        \n",
     "print('Finished training and saved model in models directory.')\n",
