Add logging and fix spelling

--- a/train.ipynb
+++ b/train.ipynb
@@ -39,6 +39,7 @@
     "from argparse import ArgumentParser, ArgumentTypeError\n",
     "from datetime import datetime\n",
     "from pathlib import Path\n",
+    "import logging\n",
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -53,6 +54,8 @@
     "        return False\n",
     "    else:\n",
     "        raise ArgumentTypeError('Boolean value expected.')\n",
+    "\n",
+    "logger = logging.getLogger(__name__)\n",
     "\n",
     "parser = ArgumentParser()\n",
     "parser.add_argument('-o', '--output', dest='output', default='', help='Location of output(s)')\n",
@@ -226,7 +229,7 @@
     "if output_length == 0:\n",
     "    output_length = 2**math.ceil(math.log2(voc.longest_tokenized))\n",
     "\n",
-    "print(f'Done! Num conversations: {convos}, num words: {len(voc.words)}, longest convo: {voc.longest_tokenized}\\n\\n')"
+    "logger.info(f'Data loaded! Num conversations: {convos}, num words: {len(voc.words)}, longest convo: {voc.longest_tokenized}\\n\\n')"
    ]
   },
   {
@@ -381,7 +384,7 @@
     "        scaler.scale(loss).backward()\n",
     "\n",
     "        scaler.unscale_(optimizer)\n",
-    "        torch.nn.utils.clip_grad_norm_(model.parameteres(), 0.5)\n",
+    "        nn.utils.clip_grad_norm_(model.parameters(), 0.5)\n",
     "\n",
     "        scaler.step(optimizer)\n",
     "        scaler.update()\n",
@@ -407,6 +410,7 @@
     "        \n",
     "        loss = model(inputs, targets, mask=mask, return_loss=True)\n",
     "        print(f'Validation loss: {loss.item()}')\n",
+    "        logger.info(f'Validation loss: {loss.item()}')\n",
     "    return loss.item()\n",
     "\n",
     "def save_checkpoint(epoch: int):\n",
@@ -425,7 +429,9 @@
     "\n",
     "    if os.getenv('GCLOUD_ENABLE') and artifacts_dir.startswith('gs://'):\n",
     "        subprocess.check_call([\n",
-    "            'gsutil', 'cp', checkpoint_file,\n",
+    "            'gsutil',\n",
+    "            '-o', 'GSUtil:parallel_composite_upload_threshold=600M',\n",
+    "            'cp', checkpoint_file,\n",
     "            os.path.join(artifacts_dir, gs_folder, checkpoint_name)\n",
     "        ])\n",
     "    print(f'Saved checkpoint: {checkpoint_name}')"
@@ -444,6 +450,7 @@
     "for epoch in range(train_epochs):\n",
     "    prompt = f'Training epoch #{epoch+1} of {train_epochs}:'\n",
     "    print(f'{prompt}\\n{\"=\" * (len(prompt) + 8)}')\n",
+    "    logger.info(prompt)\n",
     "\n",
     "    total = datetime.now()\n",
     "\n",
@@ -476,10 +483,12 @@
     "\n",
     "if os.getenv('GCLOUD_ENABLE') and model_dir.startswith('gs://'):\n",
     "    subprocess.check_call([\n",
-    "        'gsutil', 'cp', model_file,\n",
+    "        'gsutil',\n",
+    "        '-o', 'GSUtil:parallel_composite_upload_threshold=600M',\n",
+    "        'cp', model_file,\n",
     "        os.path.join(model_dir, gsfolder, model_name)\n",
     "    ])\n",
-    "        \n",
+    "\n",
     "print('Finished training and saved model in models directory.')\n",
     "print(f'Saved file as: {model_name}')"
    ]
